--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: sans-serif;
+   
 }
 
 body {
@@ -13,8 +13,28 @@ body {
 
 }
 
+@media screen and (max-width: 700px) {
+    * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+        
+    }
+    
+    body {
+        height: 60vh;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    
+    }
+}
+
 .card {
-    max-width: 350px;
+    align-items: center;
+    
+    
+    max-width: 400px;
     background-color: white;
     width: 100%;
     padding: 20px
@@ -23,7 +43,31 @@ body {
 .card .title {
     text-align: center;
     font-size: 18px;
+    position: relative;
+    max-width: 500px;
+ 
 }
+.card .title:before{
+    content:" ";
+    height: 1px;
+    width: 90px;
+    background: grey;
+    display: block;
+    position: absolute;
+    top: 70%;
+    left: 0;
+  }
+  
+  .card .title:after{
+    content:" ";
+    height: 1px;
+    width: 90px;
+    background: grey;
+    display: block;
+    position: absolute;
+    top: 70%;
+    right: 0;
+  }
 
 .card .content {
     margin-top: 10px;
@@ -35,6 +79,10 @@ body {
     border-width: 1px;
     border-style: groove;
     border-radius: 5px;
+}
+
+.card .content1 .box1 .content .course1 input[type="radio"]{
+    background-color: green;
 }
 
 .card label.box {
@@ -70,11 +118,20 @@ body {
 }
 
 .card label.box:hover {
-    background: #EFF5F0;
+    background: #C0F7C6;
+    border-color: #007F61;
+    border-width: 1px;
+    border-style: groove;
+    border-radius: 5px;
+
 }
 
-.card label .content1:hover {
-    background: #EFF5F0;
+.card .content1:hover {
+    background: #C0F7C6;
+    border-color: #007F61;
+    border-width: 1px;
+    border-style: groove;
+    border-radius: 5px;
 }
 
 .card label.box .course {
@@ -120,7 +177,8 @@ body {
     font-family: 'Inter';
     font-weight: 'Regular';
     font-size: 9.04px;
-    padding-right: 10px;
+    padding-right: 8px;
+    
 }
 
 .card label.box1 .ddkoverwrite {
@@ -147,7 +205,7 @@ body {
     font-weight: 'Regular';
     font-size: 14.46px;
     position: absolute;
-    margin-bottom: 20px;
+    margin-bottom: 30px;
     margin-left: 35px;
 }
 
@@ -156,7 +214,7 @@ body {
     font-size: 14.46px;
     color: #000000;
     position: absolute;
-    margin-top: 0px;
+    margin-top: 2px;
     margin-left: 22px;
 }
 
